--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html>
+<html> 
 	<head>
 		<meta charset="utf-8"/>
 		<title>Tutorial Git</title>
 	</head>
 	<body style="background-color: black">
-		<h1 style="color: white">Hola Mundo! Ola k ase</h1>
-		<p style="color: lightgrey">Esto es un ejemplo de contenido.<p>
+		<h1 style="color: white">Hola Mundo!!!! Ola k ase</h1>
+		<p style="color: lightgrey">Esto es un ejemplo de contenido!<p>
 	</body>
 </html>
 
